<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="14dp"
    android:id="@+id/parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/serialNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/aclonica"
            android:padding="10dp"
            android:text="@string/serial_no"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/aclonica"
            android:id="@+id/name"
            android:text="@string/customer_name"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_call_24"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_centerVertical="true"
            android:id="@+id/callBtn"
            android:contentDescription="@string/call_btn"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>