<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginHeading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginHeading"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/usernameLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/passwordLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/usernameLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.69">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/login"
                tools:layout_editor_absoluteY="520dp" />

            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/aclonica"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/validationMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation_msg"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/usernameLabel"
        app:layout_constraintEnd_toEndOf="@+id/loginHeading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginHeading"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="438dp" />


    <ImageView
        android:id="@+id/show"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/passwordInput"
        app:srcCompat="@drawable/show" />

    <ImageView
        android:id="@+id/hide"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/passwordInput"
        app:srcCompat="@drawable/hide" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="593dp" />


</androidx.constraintlayout.widget.ConstraintLayout>